[tool.poetry]
name = "dvc-issue"
version = "0.1.0"
description = "Minimal example of DVC issue"
authors = ["Alex Hasha <ahasha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^2.58.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
